--- a/template/header.html
+++ b/template/header.html
@@ -7,14 +7,14 @@
   <body>
     <header id="header">
       <div class="inner">
-        <a href="index.html" class="logo"
-          ><img src="./logo.png" width="70px" height="70px"
+        <a href="/index.html" class="logo"
+          ><img src="/images/logo.png" width="70px" height="70px"
         /></a>
         <nav id="nav">
-          <a href="index.html">Home</a>
-          <a href="what.html">What we do</a>
-          <a href="how.html">How we do</a>
-          <a href="when.html">timetable</a>
+          <a href="/index.html">Home</a>
+          <a href="/what.html">What we do</a>
+          <a href="/how.html">How we do</a>
+          <a href="/when.html">timetable</a>
           <!-- <a href="elements.html">Elements</a> -->
         </nav>
       </div>
