--- a/template/header.html
+++ b/template/header.html
@@ -15,6 +15,7 @@
           <a href="/what.html">What we do</a>
           <a href="/how.html">How we do</a>
           <a href="/when.html">timetable</a>
+          <a href="/group.html">Group info</a>
           <!-- <a href="elements.html">Elements</a> -->
         </nav>
       </div>
