--- a/template/footer.html
+++ b/template/footer.html
@@ -7,14 +7,24 @@
   <body>
     <section id="footer">
       <div class="inner">
-        <header>
-          <h2>Get in Touch</h2>
-        </header>
-       
-        <div class="copyright">
-          &copy; Untitled Design: <a href="https://templated.co/">TEMPLATED</a>.
-          Images <a href="https://unsplash.com/">Unsplash</a>
-        </div>
+        <center>
+          <div>
+            <p>
+              <strong>Cookiez</strong> by "Ditto"<i class="em em-bug"></i>
+            </p>
+            <p>
+              <strong>"Ditto"</strong> is a group name
+              <i class="em em-baby"></i>
+            </p>
+            <p>
+              <strong>Please support us!</strong> <i class="em em-bank"></i>
+            </p>
+            <p>
+              Support us a cup of <strong> coffee!</strong>
+              <i class="em em-coffee"></i>
+            </p>
+          </div>
+        </center>
       </div>
     </section>
   </body>
