--- a/template/header.html
+++ b/template/header.html
@@ -14,7 +14,8 @@
           <a href="/index.html">Home</a>
           <a href="/what.html">What we do</a>
           <a href="/how.html">How we do</a>
-          <a href="/when.html">timetable</a>
+          <a href="/when.html">Timetable</a>
+          <a href="/contract.html">Group contract</a>
           <a href="/group.html">Group info</a>
           <!-- <a href="elements.html">Elements</a> -->
         </nav>
