--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3381,6 +3381,7 @@ body {
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: .85em;
+	text-align:center;
 }
 
 #header a:hover {
@@ -4198,4 +4199,26 @@ body.is-loading #banner:after {
 		padding: 2em 0 0.1em 0;
 	}
 
+}
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content {
+  text-align:center;
+  font-size: 13pt;
+  left: 0;
+  display: none;
+  position: absolute;
+  background-color: #1c1c1c;
+  min-width: 450px;
+  box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
+  width: 90%;
+}
+.dropdown-content a:hover {background-color: #e5474b; }
+
+.dropdown:hover .dropdown-content {
+  display: table-row-group;
 }
