--- a/template/header.html
+++ b/template/header.html
@@ -14,17 +14,24 @@
           <a href="/index.html">Home</a>
           <div class="dropdown">
             <a href="/P1/what.html">What we do ﹀</a>
-            <div class="dropdown-content">
-              <a href="/P2/MVF1-Account_management.html">MVF1-Account management</a> <br>
-              <a href="/P2/MVF2-Slider.html">MVF2-Slider</a> <br>
-              <a href="/P2/MVF3-Data collection_and_recommendation.html">MVF3-Data collection and recommendation</a> <br>
-              <a href="/P2/MVF4-Recipe_information.html">MVF4-Recipe information</a> <br>
-              <a href="/P2/MVF5-Step-by-step_instructions.html">MVF5-Step-by-step instructions</a> <br> 
-            </div>
-            
+              <div class="dropdown-content">
+                <a href="/P2/MVF1-Account_management.html">MVF1-Account management</a> <br>
+                <a href="/P2/MVF2-Slider.html">MVF2-Slider</a> <br>
+                <a href="/P2/MVF3-Data collection_and_recommendation.html">MVF3-Data collection and recommendation</a> <br>
+                <a href="/P2/MVF4-Recipe_information.html">MVF4-Recipe information</a> <br>
+                <a href="/P2/MVF5-Step-by-step_instructions.html">MVF5-Step-by-step instructions</a> <br> 
+              </div>
           </div>
+
           <a href="/P1/how.html">How we do</a>
-          <a href="/P1/when.html">Timetable</a>
+
+          <div class="dropdown">
+            <a href="/P1/when.html">TIMETABLE ﹀</a>
+              <div class="dropdown-content">
+                <a href="/P2/Estimation_Plan.html">Estimation Plan</a> <br>
+              </div>
+          </div>
+
           <a href="/P1/contract.html">Group contract</a>
           <a href="/P1/group.html">Group info</a>
           <!-- <a href="elements.html">Elements</a> -->
