add 2 pages, format the pages, change the header

--- a/template/header.html
+++ b/template/header.html
@@ -1,43 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
-  <body>
-    <header id="header">
-      <div class="inner">
-        <a href="/index.html" class="logo"
-          ><img src="/images/logo.png" width="70px" height="70px"
-        /></a>
-        <nav id="nav">
-          <a href="/index.html">Home</a>
-          <div class="dropdown">
-            <a href="/P1/what.html">What we do ﹀</a>
-              <div class="dropdown-content">
-                <a href="/P2/MVF1-Account_management.html">MVF1-Account management</a> <br>
-                <a href="/P2/MVF2-Slider.html">MVF2-Slider</a> <br>
-                <a href="/P2/MVF3-Data collection_and_recommendation.html">MVF3-Data collection and recommendation</a> <br>
-                <a href="/P2/MVF4-Recipe_information.html">MVF4-Recipe information</a> <br>
-                <a href="/P2/MVF5-Step-by-step_instructions.html">MVF5-Step-by-step instructions</a> <br> 
-              </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+
+<body>
+  <header id="header">
+    <div class="inner">
+      <a href="/index.html" class="logo"><img src="/images/logo.png" width="70px" height="70px" /></a>
+      <nav id="nav">
+        <a href="/index.html">Home</a>
+        <div class="dropdown">
+          <a href="#">Minimal Viable Features ﹀</a>
+          <div class="dropdown-content">
+            <a href="/P2/MVF1-Account_management.html">MVF1-Account management</a> <br>
+            <a href="/P2/MVF2-Slider.html">MVF2-Slider</a> <br>
+            <a href="/P2/MVF3-Data_collection_and_recommendation.html">MVF3-Data collection and recommendation</a> <br>
+            <a href="/P2/MVF4-Recipe_information.html">MVF4-Recipe information</a> <br>
+            <a href="/P2/MVF5-Step-by-step_instructions.html">MVF5-Step-by-step instructions</a> <br>
+            <a href="/P2/MVF6-Tags_and_searching.html">MVF6-Tags and searching</a> <br>
+            <a href="/P2/MVF7-Upload_and_manage_posts.html">MVF7-Upload and manage posts</a> <br>
+         
+          
           </div>
+        </div>
 
-          <a href="/P1/how.html">How we do</a>
-
-          <div class="dropdown">
-            <a href="/P1/when.html">TIMETABLE ﹀</a>
-              <div class="dropdown-content">
-                <a href="/P2/Estimation_Plan.html">Estimation Plan</a> <br>
-              </div>
+        <div class="dropdown">
+          <a href="/P1/how.html">How we do ﹀</a>
+          <div class="dropdown-content">
+            <a href="/P2/Estimation_Plan.html">Estimation Plan</a> <br>
           </div>
+        </div>
 
-          <a href="/P1/contract.html">Group contract</a>
-          <a href="/P1/group.html">Group info</a>
-          <!-- <a href="elements.html">Elements</a> -->
-        </nav>
-      </div>
-    </header>
-    <a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
-  </body>
+        <div class="dropdown">
+          <a href="/P1/when.html">TIMETABLE ﹀</a>
+          <div class="dropdown-content">
+            <a href="/P2/Estimation_Plan.html">Estimation Plan</a> <br>
+          </div>
+        </div>
+
+        <!-- <a href="elements.html">Elements</a> -->
+      </nav>
+    </div>
+  </header>
+  <a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+</body>
+
 </html>
