fix dropdown height

--- a/template/header.html
+++ b/template/header.html
@@ -15,13 +15,13 @@
         <div class="dropdown">
           <a href="#">Minimal Viable Features ﹀</a>
           <div class="dropdown-content">
-            <a href="/P2/MVF1-Account_management.html">MVF1-Account management</a> <br>
-            <a href="/P2/MVF2-Slider.html">MVF2-Slider</a> <br>
-            <a href="/P2/MVF3-Data_collection_and_recommendation.html">MVF3-Data collection and recommendation</a> <br>
-            <a href="/P2/MVF4-Recipe_information.html">MVF4-Recipe information</a> <br>
-            <a href="/P2/MVF5-Step-by-step_instructions.html">MVF5-Step-by-step instructions</a> <br>
-            <a href="/P2/MVF6-Tags_and_searching.html">MVF6-Tags and searching</a> <br>
-            <a href="/P2/MVF7-Upload_and_manage_posts.html">MVF7-Upload and manage posts</a> <br>
+            <a href="/P2/MVF1-Account_management.html">Account management</a> <br>
+            <a href="/P2/MVF2-Slider.html">Slider</a> <br>
+            <a href="/P2/MVF3-Data_collection_and_recommendation.html">Data collection and recommendation</a> <br>
+            <a href="/P2/MVF4-Recipe_information.html">Recipe information</a> <br>
+            <a href="/P2/MVF5-Step-by-step_instructions.html">Step-by-step instructions</a> <br>
+            <a href="/P2/MVF6-Tags_and_searching.html">Tags and searching</a> <br>
+            <a href="/P2/MVF7-Upload_and_manage_posts.html">Upload and manage posts</a> <br>
          
           
           </div>
