--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3378,10 +3378,10 @@ body {
 	padding: 0 2em;
 	color: #ffffff;
 	text-decoration: none;
-	text-transform: uppercase;
+	/* text-transform: uppercase; */
 	font-weight: 700;
 	font-size: .85em;
-	text-align:center;
+	text-align: center;
 }
 
 #header a:hover {
@@ -3417,7 +3417,7 @@ body {
 @media screen and (max-width: 980px) {
 
 	#nav {
-		display: none;
+		/* display: none; */
 	}
 
 }
@@ -4203,22 +4203,36 @@ body.is-loading #banner:after {
 
 
 .dropdown {
-  position: relative;
-  display: inline-block;
+	position: relative;
+	display: inline-block;
 }
+
 .dropdown-content {
-  text-align:center;
-  font-size: 13pt;
-  left: 0;
-  display: none;
-  position: absolute;
-  background-color: #1c1c1c;
-  min-width: 450px;
-  box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
-  width: 100%;
+
+	font-size: 13pt;
+	line-height: 3em;
+	left: 0;
+	display: none;
+	position: absolute;
+	background-color: #1c1c1c;
+	box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+	width: 120%;
 }
-.dropdown-content a:hover {background-color: #e5474b; }
+
+.dropdown-content  a {
+	padding: 0 0 0 2em !important; 
+
+	width: 100%;
+	text-align:left !important;
+	border-bottom:1px  solid white !important;
+
+	/* text-transform: lowercase */
+}
+
+.dropdown-content a:hover {
+	background-color: #e5474b;
+}
 
 .dropdown:hover .dropdown-content {
-  display: table-row-group;
+	display: block;
 }
