--- a/template/header.html
+++ b/template/header.html
@@ -30,7 +30,7 @@
         <div class="dropdown">
           <a href="/P1/how.html">How we do ﹀</a>
           <div class="dropdown-content">
-            <a href="/P2/Estimation_Plan.html">Estimation Plan</a> <br>
+            <!-- <a href="/P2/Estimation_Plan.html">Estimation Plan</a> <br> -->
           </div>
         </div>
 
