--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -32,7 +32,7 @@
                 </form>
             </div>
             <div class="col-4 bg-red-C14A4A   rounded-right bg-red- d-flex flex-column align-items-center text-center text-white justify-content-around" >
-                <h2 >Hello, my firend</h2>
+                <h2 >Hello, my friend</h2>
                 <p>If you have a account, please login with you personal detail
                 </p>
                 <button class="rounded-lg w-75 btn btn-outline-light">Here to login</button>
