--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,57 +6,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Hello Bulma!</title>
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <title>Hello Cookiez!</title>
+
 </head>
 <body>
 <header th:replace="/fragment/common.html :: header"></header>
-<section class="section">
-    <button onclick="login(this)">login</button>
-    <div class="container">
-        <h1 class="title">
-            Hello World
-        </h1>
-        <p class="subtitle">
-            My first website with 2<strong></strong>!
-        </p>
-        <button id="showModal">123</button>
-        <div class="modal">
-            <div class="modal-background"></div>
-            <div class="modal-content">
-                <!-- Any other Bulma elements you want -->
-            </div>
-            <button class="modal-close is-large" aria-label="close"></button>
-        </div>
-        <div class="textAreas"><textarea class="textarea" placeholder="e.g. Hello world"></textarea></div>
-        <div class="textAreas"><textarea class="textarea" placeholder="e.g. Hello world"></textarea></div>
 
-    </div>
-</section>
 <th:block th:include="/fragment/common.html :: scripts"></th:block>
 <script th:inline="javascript">
-    let number = 0;
-    returnTextarea = (number) => {
-        const a = `<textarea class="textarea" placeholder="e.g.${number}"></textarea>`;
-        $(".textAreas").append(a)
-    }
-    closeModal = () => {
-        $(".modal").removeClass("is-active");
-    }
-
-    $("#showModal").click(function () {
-        number++;
-        returnTextarea(number)
-    })
-    $(".modal-close").click(() => {
-        closeModal();
-    })
-
-    function login(obj) {
-        axios.put("/api/login", {
-            name:"123"
-    })
-    }
 
 </script>
 </body>
