--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -14,7 +14,7 @@
 
     <div class="container d-flex justify-content-center">
 
-        <div class="row my-5 w-75">
+        <div class="row my-5 w-75 animate__fadeInLeftBig animate__bounceIn">
             <div class="col-8 shadow-lg d-flex flex-column p-5 rounded-left align-items-center" >
                 <h1 class="title mb-5 font-comic">
                     Create Account
@@ -28,14 +28,14 @@
                         <label for="exampleInputPassword1"> <i class="fa fa-lock"></i>Password</label>
                         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                     </div>
-                    <button type="submit" class="btn btn-light">Sign up</button>
+                    <button type="submit" class="btn btn-light">SIGN UP</button>
                 </form>
             </div>
             <div class="col-4 bg-red-C14A4A   rounded-right bg-red- d-flex flex-column align-items-center text-center text-white justify-content-around" >
                 <h2 >Hello, my friend</h2>
                 <p>If you have a account, please login with you personal detail
                 </p>
-                <button class="rounded-lg w-75 btn btn-outline-light">Here to login</button>
+                <a class="rounded-lg w-75 btn btn-outline-light" href="/login">Here to login</a>
             </div>
         </div>
 
