modified some names and grammar mistakes

--- a/template/header.html
+++ b/template/header.html
@@ -24,8 +24,8 @@
           <div class="dropdown-content">
             <a target="_blank"  href="/P2/MVF1-Account_management.html">Account management</a> <br>
             <a target="_blank" href="/P2/MVF2-Slider.html">Slider</a> <br>
-            <a target="_blank" href="/P2/MVF3-Data_collection_and_recommendation.html">Data collection and recommendation</a> <br>
-            <a target="_blank" href="/P2/MVF4-Recipe_information.html">Recipe information</a> <br>
+            <a target="_blank" href="/P2/MVF3-Data_collection_and_recommendation.html">Kitchen and Pantry System</a> <br>
+            <a target="_blank" href="/P2/MVF4-Recipe_information.html">Recipe thumbnail</a> <br>
             <a target="_blank" href="/P2/MVF5-Step-by-step_instructions.html">Step-by-step instructions</a> <br>
             <a target="_blank" href="/P2/MVF6-Tags_and_searching.html">Tags and searching</a> <br>
             <a target="_blank" href="/P2/MVF7-Upload_and_manage_posts.html">Upload and manage posts</a> <br>
