modified file path

--- a/template/header.html
+++ b/template/header.html
@@ -22,13 +22,13 @@
         <div class="dropdown">
           <a target="_blank" href="#">Minimal Viable Features ﹀</a>
           <div class="dropdown-content">
-            <a target="_blank"  href="/P2/MVF1-Account_management.html">Account management</a> <br>
-            <a target="_blank" href="/P2/MVF2-Slider.html">Slider</a> <br>
-            <a target="_blank" href="/P2/MVF3-Data_collection_and_recommendation.html">Kitchen and Pantry System</a> <br>
-            <a target="_blank" href="/P2/MVF4-Recipe_information.html">Recipe thumbnail</a> <br>
-            <a target="_blank" href="/P2/MVF5-Step-by-step_instructions.html">Step-by-step instructions</a> <br>
-            <a target="_blank" href="/P2/MVF6-Tags_and_searching.html">Tags and searching</a> <br>
-            <a target="_blank" href="/P2/MVF7-Upload_and_manage_posts.html">Upload and manage posts</a> <br>
+            <a target="_blank"  href="/mvf/MVF1-Account_management.html">Account management</a> <br>
+            <a target="_blank" href="/mvf/MVF2-Slider.html">Slider</a> <br>
+            <a target="_blank" href="/mvf/MVF3-Data_collection_and_recommendation.html">Kitchen and Pantry System</a> <br>
+            <a target="_blank" href="/mvf/MVF4-Recipe_information.html">Recipe thumbnail</a> <br>
+            <a target="_blank" href="/mvf/MVF5-Step-by-step_instructions.html">Step-by-step instructions</a> <br>
+            <a target="_blank" href="/mvf/MVF6-Tags_and_searching.html">Tags and searching</a> <br>
+            <a target="_blank" href="/mvf/MVF7-Upload_and_manage_posts.html">Upload and manage posts</a> <br>
           
           </div>
         </div>
@@ -36,25 +36,25 @@
         <div class="dropdown">
           <a target="_blank" href="/P1/how.html">How we do ﹀</a>
           <div class="dropdown-content">
-            <!-- <a target="_blank" href="/P2/Estimation_Plan.html">Estimation Plan</a> <br> -->
+            <!-- <a target="_blank" href="/Estimation_Plan.html">Estimation Plan</a> <br> -->
           </div>
         </div>
 
         <div class="dropdown">
           <a target="_blank" href="/P1/when.html">TIMETABLE ﹀</a>
           <div class="dropdown-content">
-            <a target="_blank" href="/P2/Estimation_Plan.html">Estimation Plan</a> <br>
+            <a target="_blank" href="/Estimation_Plan.html">Estimation Plan</a> <br>
           </div>
         </div>
         <div class="dropdown">
           <a target="_blank" href="/P1/when.html">Other ﹀</a>
           <div class="dropdown-content">
-            <a target="_blank" href="/P2/github/commits.html">Github Commits</a> <br>
-            <a target="_blank" href="/P2/other/team-meeting.html ">Team Meetings</a> <br>
-            <a target="_blank" href="/P2/other/trello-task.html">Trello Task</a> <br>
-            <a target="_blank" href="/P2/github/github-activity.html">Commits</a> <br>
-            <a target="_blank" href="/P2/github/github-activity.html">Commits</a> <br>
-            <a target="_blank" href="/P2/github/github-activity.html">Commits</a> <br>
+            <a target="_blank" href="/github/commits.html">Github Commits</a> <br>
+            <a target="_blank" href="/other/team-meeting.html ">Team Meetings</a> <br>
+            <a target="_blank" href="/other/trello-task.html">Trello Task</a> <br>
+            <a target="_blank" href="/github/github-activity.html">Commits</a> <br>
+            <a target="_blank" href="/github/github-activity.html">Commits</a> <br>
+            <a target="_blank" href="/github/github-activity.html">Commits</a> <br>
        
           </div>
         </div>
