--- a/template/header.html
+++ b/template/header.html
@@ -34,20 +34,20 @@
         </div>
 
         <div class="dropdown">
-          <a target="_blank" href="/P1/how.html">How we do ﹀</a>
+          <a target="_blank" href="/other/how.html">How we do ﹀</a>
           <div class="dropdown-content">
             <!-- <a target="_blank" href="/Estimation_Plan.html">Estimation Plan</a> <br> -->
           </div>
         </div>
 
         <div class="dropdown">
-          <a target="_blank" href="/P1/when.html">TIMETABLE ﹀</a>
+          <a target="_blank" href="/other/when.html">TIMETABLE ﹀</a>
           <div class="dropdown-content">
             <a target="_blank" href="/Estimation_Plan.html">Estimation Plan</a> <br>
           </div>
         </div>
         <div class="dropdown">
-          <a target="_blank" href="/P1/when.html">Other ﹀</a>
+          <a target="_blank" href="/other/when.html">Other ﹀</a>
           <div class="dropdown-content">
             <a target="_blank" href="/github/commits.html">Github Commits</a> <br>
             <a target="_blank" href="/other/team-meeting.html ">Team Meetings</a> <br>
