--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4208,7 +4208,7 @@ body.is-loading #banner:after {
 }
 
 .dropdown-content {
-
+	width: 150% !important;
 	font-size: 13pt;
 	line-height: 3em;
 	left: 0;
@@ -4216,15 +4216,16 @@ body.is-loading #banner:after {
 	position: absolute;
 	background-color: #1c1c1c;
 	box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+
 	width: 120%;
 }
 
-.dropdown-content  a {
-	padding: 0 0 0 2em !important; 
-
+.dropdown-content a {
+	padding: 0 2em 0 2em !important;
+	margin-right: 3em;
 	width: 100%;
-	text-align:left !important;
-	border-bottom:1px  solid white !important;
+	text-align: left !important;
+	border-bottom: 1px solid white !important;
 
 	/* text-transform: lowercase */
 }
