--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -27,12 +27,18 @@
             <h1 class="title mb-5 font-comic animate__bounceIn">
                 Sign in to Cookiez
             </h1>
+            <div class="d-flex justify-content-center" id="loading" >
+                <div class="spinner-border  d-none" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>
             <div class="w-75">
                 <div class="form-group  ">
                     <label for="username"><i class="fa fa-user"></i> Username</label>
                     <input type="text" class="form-control" name="username" id="username"
                            placeholder="Email or Username">
                 </div>
+
                 <div class="form-group">
                     <label for="password"> <i class="fa fa-lock"></i>Password</label>
                     <input type="password" class="form-control" name="password" id="password" placeholder="Password">
@@ -48,23 +54,11 @@
 
 
 <th:block th:include="/fragment/common.html :: scripts"></th:block>
-<script th:inline="javascript">
-    function handleLoginBtn() {
-        let data = {}
-        axios.post("/api/login", {
 
-                username: $("#username").val(),
-                password: $("#password").val(),
+<script type="text/javascript" src="/js/user/login.js">
+</script>
+<script>
 
-        }).then(res => {
-            console.log(res)
-            localStorage.setItem("accessToken","Bearer "+ res['data']['data']['accessToken'])
-            window.location.replace("/")
-        }).catch(err => {
-            bootbox.alert("Login Failed")
-            console.log(err)
-        })
-    }
 </script>
 </body>
 </html>
