--- a/src/main/resources/templates/fragment/base-structure.html
+++ b/src/main/resources/templates/fragment/base-structure.html
@@ -16,6 +16,8 @@
 
 
 <th:block th:include="/fragment/common.html :: scripts"></th:block>
+<script type="text/javascript" src="/js/">
+</script>
 <script th:inline="javascript">
 
 </script>
