--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -15,6 +15,7 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/icon.css">
 
 </head>
 <body>
