--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -19,18 +19,49 @@
         </div>
         <h2 class="text-grad-888276 ">Admin's Kitchen</h2>
         <div class="my-2">
-            <button class="btn bg-red-C14A4A rounded-50  mx-2"><i class="iconfont icon-pencil"></i> Edit Profile</button>
+            <button class="btn bg-red-C14A4A rounded-50  mx-2"><i class="iconfont icon-pencil"></i> Edit Profile
+            </button>
             <button class=" btn bg-red-C14A4A rounded-50  mx-2"><i class="iconfont icon-cross"></i>Add a recipe</button>
         </div>
 
     </div>
-    <div class="d-flex w-75 shadow-lg">
-        <a class="btn bg-success rounded-left text-white" href="#"><i class="iconfont icon-cook"></i> Created recipes</a>
+    <div class="d-flex w-100  mb-4">
+        <a class="btn bg-success rounded-left text-white" href="#"><i class="iconfont icon-cook"></i> Created
+            recipes</a>
         <a class="btn  mr-auto rounded-right " href="#"><i class="iconfont icon-bookmarks"></i> Saves</a>
-        <a class="btn bg-red-C14A4A rounded-50 ml-auto" href="#"><i class="iconfont icon-lanzi mr-1"></i>Go to pantry</a>
+        <a class="btn bg-red-C14A4A rounded-50 ml-auto" href="#"><i class="iconfont icon-lanzi mr-1"></i>Go to
+            pantry</a>
     </div>
-    <div class="d-flex w-75 shadow-lg h-100">
-        <div class=""></div>
+    <div class="d-flex w-100 shadow-sm h-100 p-4 justify-content-around mb-5 border-danger">
+        <div class="card shadow-2-2-5 p-2 rounded-20" style="width: 40%">
+            <div class="d-flex">
+                <img src="/images/pasted.png" class="rounded shadow-2-2-5 m-2" alt="" width="200px" height="130px">
+                <div class="d-flex flex-column">
+                    <h2>Title</h2>
+                    <p> description</p>
+
+                </div>
+            </div>
+            <div class="ml-2">
+                <button class="btn bg-red-C14A4A rounded-50 "><i class="iconfont icon-pencil mr-1"></i> Edit</button>
+                <button class="btn bg-red-C14A4A rounded-50 "><i class="iconfont icon-x mr-1"></i>Delete</button>
+                <button class="btn btn-light ml-auto bg-grad-888276" disabled><i class="iconfont icon-entypocalendar mr-1"></i>01.10.2050</button>
+            </div>
+        </div>
+        <div class="card shadow-2-2-5 p-2 rounded-20" style="width: 40%">
+            <div class="d-flex">
+                <img src="/images/pasted.png" class="rounded shadow-2-2-5 m-2" alt="" width="200px" height="130px">
+                <div class="d-flex flex-column">
+                    <h2>Title</h2>
+                    <p> description</p>
+                    <button class="mt-auto">01.10.2050</button>
+                </div>
+            </div>
+            <div class="ml-2">
+                <button class="btn bg-red-C14A4A rounded-50 "><i class="iconfont icon-pencil mr-1"></i> Edit</button>
+                <button class="btn bg-red-C14A4A rounded-50 "><i class="iconfont icon-x mr-1"></i>Delete</button>
+            </div>
+        </div>
     </div>
 </div>
 
