--- a/template/header.html
+++ b/template/header.html
@@ -37,20 +37,18 @@
 
 
         <div class="dropdown ">
-          <a target="_blank" href="/other/when.html">Plan ﹀</a>
+          <a target="_blank" href="/other/estimate.html">Plan ﹀</a>
           <div class="dropdown-content">
             <a target="_blank" href="/plan/how.html"> Technologies</a>
             <a target="_blank" href="/plan/estimate.html">Estimation Plan</a> <br> </div>
         </div>
         <div class="dropdown">
-          <a target="_blank" href="/other/when.html">Other ﹀</a>
+          <a target="_blank" href="/github/commits.html">Other ﹀</a>
           <div class="dropdown-content">
             <a target="_blank" href="/github/commits.html">Github Commits</a> <br>
             <a target="_blank" href="/other/team-meeting.html ">Team Meetings</a> <br>
             <a target="_blank" href="/other/trello-task.html">Trello Task</a> <br>
-            <a target="_blank" href="/Estimation_Plan.html">Estimation Plan</a> <br>
-            <a target="_blank" href="/github/github-activity.html">Commits</a> <br>
-
+            <a target="_blank" href="/other/github-activity.html">GitHub Activity</a> <br>
 
           </div>
         </div>
